# Python

./: .gitignore  AUTHORS  CMakeLists.txt  README.markdown
NullPythonAI/: CMakeLists.txt
NullPythonAI/src/: nullai.py
builder/: First.py  Second.py  callback_parser.py  event_parser.py  generator.py  helper.py  interface_builder.py  regex.py
builder/template/: __init__.py  context.py  defaulttags.py  engine.py  helper.py
builder/templates/: aiInterface.py  callback.c  command_wrapper.c  converter.c  create_command.c  event_wrapper.c  interface.c  wrappai.c
cross/: crosscompile.sh
data/: InterfaceInfo.lua  interface.properties
src/: InterfaceDefines.h  InterfaceExport.c  InterfaceExport.h  ai.h  wrapper.py
src/PyAI/: __init__.py  baseai.py  team.py
test/NullPythonAI/data/: AIInfo.lua
test/NullPythonAI/src/: console.py  nullai.py
